<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#303700B3"

        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sayButton">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say"
        android:enabled="false"

        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:enabled="false"

        app:layout_constraintStart_toEndOf="@id/sayButton"
        app:layout_constraintEnd_toStartOf="@id/clearButton"
        app:layout_constraintBaseline_toBaselineOf="@id/sayButton"
        />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"

        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintEnd_toStartOf="@id/quitButton"
        app:layout_constraintBaseline_toBaselineOf="@id/sayButton"
        />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"

        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/sayButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
    <!--        android:id="@+id/fabPlay"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="Play"-->
    <!--        android:textAlignment="center"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />-->

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/fabVoice"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:clickable="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:srcCompat="@drawable/ic_keyboard_voice" />-->